--- a/package.json
+++ b/package.json
@@ -19,26 +19,28 @@
   },
   "homepage": "https://github.com/karmaniverous/reducer#readme",
   "devDependencies": {
-    "@babel/cli": "^7.17.10",
-    "@babel/core": "^7.18.2",
+    "@babel/cli": "^7.18.6",
+    "@babel/core": "^7.18.6",
     "@babel/eslint-parser": "^7.18.2",
-    "@babel/preset-env": "^7.18.2",
-    "@reduxjs/toolkit": "^1.8.2",
+    "@babel/preset-env": "^7.18.6",
+    "@babel/preset-react": "^7.18.6",
+    "@reduxjs/toolkit": "^1.8.3",
+    "@types/react": "^18.0.15",
     "babel-plugin-module-extension": "^0.1.3",
     "chai": "^4.3.6",
-    "eslint": "^8.17.0",
+    "eslint": "^8.19.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-mocha": "^10.0.5",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-react": "^7.30.1",
     "mocha": "^10.0.0",
-    "prettier": "^2.6.2"
+    "prettier": "^2.7.1"
   },
   "mocha": {
     "spec": "./{,!(node_modules)/**}/*.test.*js"
   },
   "dependencies": {
-    "@babel/preset-react": "^7.18.6",
     "prop-types": "^15.8.1",
     "react": "^18.2.0"
   }
