--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "scripts": {
     "build": "babel src -d lib",
-    "test": "mocha './{,!(node_modules)/**}/*.test.*js'"
+    "test": "mocha './{,!(node_modules)/**}/*.test.*js*'"
   },
   "repository": {
     "type": "git",
@@ -24,7 +24,9 @@
     "@babel/eslint-parser": "^7.18.2",
     "@babel/preset-env": "^7.18.6",
     "@babel/preset-react": "^7.18.6",
+    "@babel/register": "^7.18.6",
     "@reduxjs/toolkit": "^1.8.3",
+    "@testing-library/react": "^13.3.0",
     "@types/react": "^18.0.15",
     "babel-plugin-module-extension": "^0.1.3",
     "chai": "^4.3.6",
@@ -34,11 +36,17 @@
     "eslint-plugin-mocha": "^10.0.5",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-react": "^7.30.1",
+    "global-jsdom": "^8.5.0",
+    "jsdom": "^20.0.0",
     "mocha": "^10.0.0",
     "prettier": "^2.7.1"
   },
   "mocha": {
-    "spec": "./{,!(node_modules)/**}/*.test.*js"
+    "require": [
+      "@babel/register",
+      "global-jsdom/register"
+    ],
+    "spec": "./{,!(node_modules)/**}/*.test.*js*"
   },
   "dependencies": {
     "prop-types": "^15.8.1",
