--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@babel/register": "^7.18.6",
     "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.2.1",
     "@types/react": "^18.0.15",
     "babel-plugin-module-extension": "^0.1.3",
     "chai": "^4.3.6",
