--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,9 +1,9 @@
 {
-	"recommendations": [
-		"dbaeumer.vscode-eslint",
-		"shyykoserhiy.git-autoconfig",
-		"github.vscode-pull-request-github",
-		"hbenl.vscode-mocha-test-adapter",
-		"esbenp.prettier-vscode",
-	]
+  "recommendations": [
+    "dbaeumer.vscode-eslint",
+    "shyykoserhiy.git-autoconfig",
+    "hbenl.vscode-mocha-test-adapter",
+    "esbenp.prettier-vscode",
+    "eamodio.gitlens"
+  ]
 }
